updated page structure

--- a/plutonication/templates/main_page.html
+++ b/plutonication/templates/main_page.html
@@ -6,6 +6,13 @@
     <title>Plutonication</title>
 </head>
 <body>
-    Plutonication
+    <h1>Welcome to Plutonication</h1>
+
+    <p><b>Here is everything you might need:</b></p>
+
+    <p><a href="/docs/javascript">Typescript dApp implementation guide</a></p>
+    <p><a href="/docs/csharp">C# dApp implementation guide (in development)</a></p>
+    <p><a href="/docs/server/flask">Python (flask) server documentation</a></p>
+    <p><a href="/deploy/flask-digital-ocean">Python (flask) server Digital Ocean deployment guide</a></p>
 </body>
 </html>
