--- a/plutonication/templates/main_page.html
+++ b/plutonication/templates/main_page.html
@@ -11,6 +11,7 @@
     <p><b>Here is everything you might need:</b></p>
 
     <p><a href="/docs/javascript">Typescript dApp implementation guide</a></p>
+    <p><a href="/docs/react-example">React example dApp implementation guide</a></p>
     <p><a href="/docs/csharp">C# dApp implementation guide (in development)</a></p>
     <p><a href="/docs/flask-server">Python (flask) server documentation</a></p>
     <p><a href="/deploy/flask-digital-ocean">Python (flask) server Digital Ocean deployment guide</a></p>
