--- a/plutonication/templates/plutonication_react_example_page.html
+++ b/plutonication/templates/plutonication_react_example_page.html
@@ -50,7 +50,7 @@
         <div class="content-menu">
             <div class="content-infos">
                 <!--<div class="info"><b>Version:</b> 1.0.5</div>-->
-                <div class="info"><b>Last Updated:</b> 8th Jan, 2024</div>
+                <div class="info"><b>Last Updated:</b> 6th Feb, 2024</div>
             </div>
             <ul>
                 <li class="scroll-to-link" data-target="content-installation">
@@ -165,6 +165,9 @@ export default App;
                 </p>
                 <p>
                     Everything is described by the comments.
+                </p>
+                <p>
+                    To learn more about the Plutonication typescript package, be sure to read through <a href="/docs/javascript">this guide</a>.
                 </p>
             </div>
             <!-- Github Corner Ribbon - to remove (Ribbon created with : http://tholman.com/github-corners/ )-->
