Initialize Plutonication explained

--- a/plutonication/templates/plutonication_csharp_page.html
+++ b/plutonication/templates/plutonication_csharp_page.html
@@ -200,7 +200,12 @@ Account account = await PlutonicationDAppClient.InitializeAsync(
 );
                  </code></pre>
                  <p>
-
+                    Follow the comments.
+                 </p>
+                 <p>
+                    <code class="higlighted break-word">InitializeAsync</code> method finishes when the AccessCredentials
+                    are passed to the wallet and the wallet connects successfully to the Plutonication server.
+                    Do not get confused if your application gets stuck, this might be the reason.
                  </p>
             </div>
 
