--- a/plutonication/templates/main_page.html
+++ b/plutonication/templates/main_page.html
@@ -63,7 +63,7 @@
         <a href="/docs/csharp"><div class="tile">C# dApp implementation guide</div></a>
         <a href="/docs/flask-server"><div class="tile">Python (flask) server documentation</div></a>
         <a href="/deploy/flask-digital-ocean"><div class="tile">Python (flask) server Digital Ocean deployment guide</div></a>
-        
+        <a href="https://github.com/RostislavLitovkin/PlutoWallet-presskit"><div class="tile">Presskit</div></a>
     </div>
 </body>
 </html>
